--- a/andreabizzotto/classes/pubspec.yaml
+++ b/andreabizzotto/classes/pubspec.yaml
@@ -4,9 +4,9 @@ description: A simple command-line application.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.12.0 < 4.0.0'
 
 dependencies:
 
 dev_dependencies:
-  pedantic: ^1.11.0
+  flutter_lints: ^3.0.1
